--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="container">
-    <form (submit)="todoSubmit(todoForm.value); todoForm.resetForm()">
+    <form  (submit)="todoSubmit(todoForm.value); todoForm.resetForm()">
         <div class="form-group">
-            <h1 class="text-center ">Todo App</h1>
+            <h1 class="text-center ">To Do List App</h1>
             <div class="input-group-prepend">
-                <input type="text" #todo class="form-control" placeholder="Add Todo" name="todo" ngModel> <span class="input-group-text" (click)="addTodo(todo.value)">    <i class="material-icons">add</i></span> </div>
+                <input type="text" #todo class="form-control" placeholder="Add a To Do Item" name="todo" ngModel> <span class="input-group-text" (click)="addTodo(todo.value)">    <i class="material-icons">add</i></span> </div>
         </div>
         <div class="data">
             <ul class="list-unstyled">
