--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,7 @@
-/*Google fonts*/
-@import url('https://fonts.googleapis.com/css?family=Raleway');
-
 body{
 	padding: 0;
 	margin: 0;
+  font-family: 'B612 Mono', monospace;
 
 }
 form{
@@ -15,11 +13,11 @@ form{
   overflow: hidden;
 }
 form h1{
-    font-family: "Raleway";
+
     color:#F97300;
 }
 form input[type=text]::placeholder{
-   font-family: "Raleway";
+
    color:#666;
 }
 form .data{
@@ -31,7 +29,7 @@ form .data li{
  padding: 1em;
  margin: 1em auto;
  color: #666;
- font-family: "Raleway";
+
 }
 form .data li i{
     float: right;
@@ -55,7 +53,7 @@ form .input-group-text i{
 }
 form .form-control{
 	height: 3em;
-    font-family: "Raleway";
+  
 }
 form .form-control:focus{
 	box-shadow: 0;
