--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,13 +8,13 @@ form{
 	max-width: 30em;
 	margin: 4em auto;
 	position: relative;
-  background: #f4f4f4;
+  background: #d9534f;
   padding: 2em 3em;
   overflow: hidden;
 }
 form h1{
 
-    color:#F97300;
+    color:#f9f9f9;
 }
 form input[type=text]::placeholder{
 
@@ -25,7 +25,7 @@ form .data{
 }
 form .data li{
  background: #fff;
- border-left: 4px solid #F97300;
+ border-left: 4px solid #5bc0de;
  padding: 1em;
  margin: 1em auto;
  color: #666;
@@ -33,11 +33,11 @@ form .data li{
 }
 form .data li i{
     float: right;
-    color: #888;
+    color: #5bc0de;
     cursor: pointer;
 }
 form .input-group-text{
-    background: #F97300;
+    background: #5bc0de;
     border-radius: 50%;
     width: 5em;
     height: 5em;
@@ -53,7 +53,6 @@ form .input-group-text i{
 }
 form .form-control{
 	height: 3em;
-  
 }
 form .form-control:focus{
 	box-shadow: 0;
